solc_ossfuzz_seed_corpus/test_sol/test_b761165a497766fea719c9a1ec06faf360d1c00770f817ee03cebbff92a8e206_3041c6b25b2c9cbae7104ade2f9320ec313565bd_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;
struct St0 {
  function (address payable, string memory, uint184) external   returns (function (int256) external   returns (function (bool, address) internal  , bytes32, bytes32), int232) el0;
  int64 el1;
}
// ----
// TypeError 2582: (su0.sol:150-186): Internal type cannot be used for external function type.
